---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    case 1, type {\n        _, _ -> 0\n    }\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:3:13
  │
3 │     case 1, type {
  │             ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
`{`
an expression
